2014-03-22
Changed [DB no on memory] to [on memory Database System].
All Operation goes through On memory Database.

2014-03-26
Backup command and function added.
(to $HOME/.aworklog_diary/aworklog_diary.db.`date`)

2014-03-27
Find function upgrade !
It corresponded function format["Install, Modify"].
and Regex Search function (search function) added.
Its command is a "find" and "search".

2014-03-27
Shell's command line argument half corresponded.
exam: [$ diary list] to list view.

2014-03-29
Various functions of Backup relation were added.

2014-03-30
function of Listup backed up files were added.
issue => Cannot remove file without knowing why;